--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GoUtAmRaj07.github.io/portfolio",
+  "homepage": "https://GoUtAmRaj07.github.io/Goutam.me",
   "name": "react_portfolio",
   "version": "0.1.0",
   "private": true,
